[gd_scene load_steps=45 format=2]

[ext_resource path="res://Scripts/Player_Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Animation_Player/all_move01.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Player_Scripts/Player_FSM.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Weapon.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.78159, 28.1991 )

[sub_resource type="GDScript" id=2]
script/source = "extends Camera2D

var amplitude: float

func _process(delta: float) -> void:
	offset = Vector2(rand_range(-amplitude, amplitude), rand_range(-amplitude, amplitude))

func _on_shake_duration_timeout():
	set_process(false)"

[sub_resource type="Animation" id=3]
length = 0.2
step = 0.01

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=8]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 9 ]
}

[sub_resource type="Animation" id=9]
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Dash"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Double_jump"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Fall"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "Rise"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Run"

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachine" id=38]
states/Dash/node = SubResource( 10 )
states/Dash/position = Vector2( 332, 368 )
states/Double_jump/node = SubResource( 11 )
states/Double_jump/position = Vector2( 276, 101 )
states/Fall/node = SubResource( 12 )
states/Fall/position = Vector2( 276, 214 )
states/Idle/node = SubResource( 13 )
states/Idle/position = Vector2( 534, 214 )
states/Rise/node = SubResource( 14 )
states/Rise/position = Vector2( 534, 101 )
states/Run/node = SubResource( 15 )
states/Run/position = Vector2( 719, 315 )
transitions = [ "Idle", "Run", SubResource( 16 ), "Run", "Idle", SubResource( 17 ), "Idle", "Rise", SubResource( 18 ), "Rise", "Idle", SubResource( 19 ), "Rise", "Fall", SubResource( 20 ), "Fall", "Idle", SubResource( 21 ), "Fall", "Double_jump", SubResource( 22 ), "Rise", "Double_jump", SubResource( 23 ), "Double_jump", "Fall", SubResource( 24 ), "Run", "Rise", SubResource( 25 ), "Rise", "Run", SubResource( 26 ), "Fall", "Run", SubResource( 27 ), "Run", "Fall", SubResource( 28 ), "Idle", "Dash", SubResource( 29 ), "Run", "Dash", SubResource( 30 ), "Fall", "Dash", SubResource( 31 ), "Double_jump", "Dash", SubResource( 32 ), "Rise", "Dash", SubResource( 33 ), "Dash", "Fall", SubResource( 34 ), "Dash", "Idle", SubResource( 35 ), "Dash", "Run", SubResource( 36 ), "Dash", "Rise", SubResource( 37 ) ]
graph_offset = Vector2( 42, 95 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=39]

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 10, 1.9878 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
scale = Vector2( 2.0833, 2.05592 )
z_index = 10
z_as_relative = false
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="HUD" type="CanvasLayer" parent="." groups=[
"player_hud",
]]
pause_mode = 2

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 1.27492, 3.87567 )
shape = SubResource( 1 )

[node name="camera" type="Camera2D" parent="."]
editor/display_folded = true
current = true
script = SubResource( 2 )

[node name="shake_duration" type="Timer" parent="camera"]
wait_time = 2.0
one_shot = true

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 4
hframes = 3
frame = 7

[node name="animation_player" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 3 )
anims/Dash = SubResource( 4 )
anims/Double_jump = SubResource( 5 )
anims/Fall = SubResource( 6 )
anims/Idle = SubResource( 7 )
anims/Rise = SubResource( 8 )
anims/Run = SubResource( 9 )

[node name="animation_tree" type="AnimationTree" parent="."]
tree_root = SubResource( 38 )
anim_player = NodePath("../animation_player")
active = true
parameters/playback = SubResource( 39 )
script = ExtResource( 3 )

[node name="pass_through" type="Area2D" parent="."]
editor/display_folded = true
position = Vector2( 1.13842, 31.0185 )

[node name="shape" type="CollisionShape2D" parent="pass_through"]
shape = SubResource( 40 )

[node name="weapon_pos" type="Position2D" parent="."]
editor/display_folded = true
position = Vector2( 35, 0 )

[node name="Weapon" parent="weapon_pos" instance=ExtResource( 4 )]

[node name="dash_timer" type="Timer" parent="."]

[connection signal="timeout" from="camera/shake_duration" to="camera" method="_on_shake_duration_timeout"]
[connection signal="body_exited" from="pass_through" to="." method="_on_pass_through_body_exited"]
[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
